# YaesuFT-1000MP

./: .gitignore  README.md  build.py  cli.py  ft1000mp.spec  pyproject.toml
.github/workflows/: build-release.yml
docs/: WSJT-X_Digirig_FT1000MP_Setup.md
ft1000mp/: __init__.py  bcd.py  exceptions.py  protocol.py  serial_port.py  transceiver.py
tests/: test_ft1000mp.py
