[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft1000mp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyserial>=3.5"]

[tool.setuptools.packages.find]
include = ["ft1000mp*"]

[project.optional-dependencies]
test = ["pytest>=7.0", "mypy>=1.0", "types-pyserial>=3.5"]
build = ["pyinstaller>=6.0"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["cli"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
markers = [
    "live: tests that require a live radio on /dev/ttyUSB0",
]
